--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -4,96 +4,14 @@ on: [push]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        ghc: ['8.10.4']
-        include:
-        - os: ubuntu-latest
-          container: 'lierdakil/alpine-haskell:8.10.4-pwsh'
-          config: static-build-cabal-config
-        - os: windows-latest
-          config: dynamic-build-cabal-config
-    runs-on: ${{ matrix.os }}
-    container: ${{ matrix.container }}
-    steps:
-    - uses: actions/checkout@v2
-    - uses: haskell/actions/setup@v1
-      if: '!(matrix.container)'
-      with:
-        ghc-version: ${{matrix.ghc}}
-        cabal-version: '3.2'
-    - name: Cabal init
-      shell: pwsh
-      run: |
-        $store = Join-Path $pwd ".cabal-store"
-        New-Item -ItemType Directory -Force "$store"
-        cabal user-config init --force --augment="store-dir: $store" `
-          --augment="install-method: copy" `
-          --augment="overwrite-policy: always"
-        $bindir = Join-Path $store "bin"
-        echo "$bindir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    - name: Cabal update
-      run: cabal v2-update
-    - name: Copy build config
-      if: matrix.config
-      run: cp misc/${{ matrix.config }} ./cabal.project
-    - name: Cabal configure
-      run: cabal v2-configure
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: .cabal-store
-        key: ${{runner.os}}-${{matrix.ghc}}-${{hashFiles('cabal2json.cabal')}}-${{hashFiles('dist-newstyle/cache/plan.json')}}
-        restore-keys: |
-          ${{runner.os}}-${{matrix.ghc}}-${{hashFiles('cabal2json.cabal')}}-${{hashFiles('dist-newstyle/cache/plan.json')}}
-          ${{runner.os}}-${{matrix.ghc}}-${{hashFiles('cabal2json.cabal')}}
-          ${{runner.os}}-${{matrix.ghc}}
-    - shell: bash
-      run: |
-        ls -l .cabal-store/ghc-${{matrix.ghc}}/ || true
-        rm -rvf .cabal-store/ghc-${{matrix.ghc}}/cabal2json-* || true
-        rm -rvf .cabal-store/ghc-${{matrix.ghc}}/cabal2json-* || true
-        rm -rvf .cabal-store/ghc-${{matrix.ghc}}/cabal2json-* || true
-    - name: Install dependencies
-      run: cabal v2-build --only-dependencies --enable-tests
-    - name: Install
-      shell: bash
-      run: |
-        mkdir install
-        export GIT_DIR="$PWD/.git"
-        cabal v2-install --installdir=$PWD/install
-    - uses: actions/upload-artifact@v2
-      with:
-        name: build-${{ runner.os }}
-        path: install
-
-  release:
-    needs: [build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/download-artifact@v2
-      name: Download all artifacts
-    - name: Repack assets
-      run: |
-        mkdir assets
-        tar cvJf assets/cabal2json-macOS.tar.xz -C build-macOS cabal2json
-        tar cvJf assets/cabal2json-Linux.tar.xz -C build-Linux cabal2json
-        7z a assets/cabal2json-Windows.7z build-Windows/cabal2json.exe
+    - uses: cachix/install-nix-action@v13
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - run: make
     - uses: actions/upload-artifact@v2
       with:
-        name: release-assets
-        path: assets
-    - name: Create release
-      if: contains(github.ref, 'tags/v')
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        set -x
-        assets=()
-        for asset in assets/*; do
-          assets+=("-a" "$asset")
-        done
-        tag_name="${GITHUB_REF##*/}"
-        hub release create "${assets[@]}" -m "$tag_name" "$tag_name"
+        name: build-${{ runner.os }}
+        path: cabal2json.min.js
