--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -10,6 +10,10 @@ jobs:
     - uses: cachix/install-nix-action@v13
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - uses: cachix/cachix-action@v10
+      with:
+        name: cabal2json
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: make
     - uses: actions/upload-artifact@v2
       with:
