--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -23,3 +23,10 @@ jobs:
       with:
         name: build-${{ runner.os }}
         path: cabal2json.min.js
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: cabal2json.min.js
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
