--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v13
       with:
         nix_path: nixpkgs=channel:nixos-unstable
@@ -17,16 +17,15 @@ jobs:
       with:
         name: cabal2json
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: npm ci
     - run: make
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: build-${{ runner.os }}
-        path: cabal2json.min.js
+        path: cabal2json.wasm
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: cabal2json.min.js
+        files: cabal2json.wasm
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
