--- a/cabal2json.cabal
+++ b/cabal2json.cabal
@@ -1,4 +1,4 @@
-cabal-version:      1.12
+cabal-version:      2.0
 name:               cabal2json
 version:            0.1.0.0
 license:            BSD3
@@ -25,7 +25,7 @@ executable cabal2json
     hs-source-dirs:   src
     default-language: Haskell2010
     build-depends:
-        Cabal >=3.9 && <3.10,
+        Cabal ^>=3.10,
         aeson >=1.5.6.0 && <3,
         base >=4.7 && <5,
         bytestring >=0.10.12.0 && <0.12,
